<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="submitBtn">SUBMIT</string>
    <string name="conjuction_text">Conjuction (AND)</string>
    <string name="question">A ^ B</string>
    <string name="conjuction_a_t_1">T</string>
    <string name="conjuction_a_t_2">T</string>
    <string name="conjuction_a_f_1" />
    <string name="conjuction_a_F_1">F</string>
    <string name="conjuction_a_f_2">F</string>
    <string name="conjuction_b_t_1">T</string>
    <string name="conjuction_b_f_1">F</string>
    <string name="conjuction_b_t_2">T</string>
    <string name="conjuction_b_f_2">F</string>
    <string name="submit_btn">SUBMIT</string>
</resources>